# MCP-Chinese-Getting-Started-Guide

./: README.md
mcp_deepseek_started/: .env  README.md  main.py  pyproject.toml
mcp_getting_started/: main.py  pyproject.toml  web_search.py
mcp_simple_chatbot/: main.py  pyproject.toml
